# DSA2

./: AVL.h  BST.h  BST0.h  CMakeLists.txt  DBMS.c  DBMS.h  DBMS_dates.h  DSA2.files  DSA2.kdev4  DSA2.pro  Makefile  Record.md  build.sh  build_L2.sh  build_dbms.sh  build_shim.sh  build_std.sh  build_test.sh  elle0.h  elle1.h  force_multiplier.h  git_push.sh  hyper.sh  main.c  output0.txt  primitives.h  prints.h  prints2.h  stack_elle.h  stack_queue_ADT.h  system_startup.sh  test0  test0.c  test1.h  test2.h  tested_menu_loop.md  traversals_iterative.h  traversals_recursive.h
.kdev4/: DSA2.kdev4
DBMS/src/: DBMS.c  DBMS.h  DBMS_basic.c  DBMS_dates.c  DBMS_menu.c  DBMS_menu_f.c  DBMS_menu_loop.c  main.c
misc/hx_config/: config.toml  hx_config.md  theme0.toml
src/: BST0.c  elle0.c  header0.c  header0.h  primitives.c  prints.c  prints2.c  stack_elle.c  stack_queue_ADT.c  test0.c  test1.c  test2.c  traversals_iterative.c  traversals_recursive.c
